[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "directional-distributions"
version = "0.1.0"
description = "Directional distribution loss functions and evaluation utilities for PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "numpy>=1.22",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["directional_distributions*"]
